code2/traceback.txt
Traceback (most recent call last):
  File "/home/morten/.virtualenvs/Ez2Ec2/local/lib/python2.7/site-packages/pudb/__init__.py", line 77, in runscript
    dbg._runscript(mainpyfile)
  File "/home/morten/.virtualenvs/Ez2Ec2/local/lib/python2.7/site-packages/pudb/debugger.py", line 371, in _runscript
    self.run(statement, globals=globals_, locals=locals_)
  File "/usr/lib/python2.7/bdb.py", line 400, in run
    exec cmd in globals, locals
  File "<string>", line 1, in <module>
  File "im_resize_pil.py", line 37
    box = [element for tpl in d.values() for element in tpl]
      ^
SyntaxError: invalid syntax
